# EAGv2

./: README.md  mcp_paint_server.py  talk2mcp.py
Session 10/: README.md  main_new.py
Session 10/agent/: agent_loop3.py
Session 10/config/: mcp_server_config.yaml  profiles.yaml
Session 10/decision/: decision_new.py
Session 10/perception/: perception_new.py
Session 10/prompts/: decision_prompt.txt  perception_prompt.txt
Session 6/: README.md  action.py  decision.py  main.py  models.py  perception.py  pyproject.toml
Session 7/agentic_web_memory_extension/: README.md  action.py  decision.py  main.py  memory.py  perception.py  pyproject.toml
Session 7/agentic_web_memory_extension/chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
Session 7/agentic_web_memory_extension/utils/: embedding_store.py  llm_interface.py
Session9/: README.md  architecture.txt  bug.docx  heuristics.py  new_prompt.txt
