[project]
name = "agentic-web-memory-extension"
version = "0.1.0"
description = "Agentic AI system with Chrome extension and FastAPI backend using FAISS and Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "google-generativeai>=0.8.3",
  "python-dotenv>=1.0.1"
]

[tool.uv]
package = true

[project.optional-dependencies]
dev = [
  "ruff>=0.6.8",
  "pytest>=8.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["agentic_web_memory_extension"]

[project.scripts]
agentic-web-memory = "agentic_web_memory_extension.main:run"

